[package]
authors = ["Sam Crow <samcrow@uw.edu>"]
name = "xplm"
version = "0.3.3"
license = "MIT/Apache-2.0"
repository = "https://github.com/samcrow/rust-xplm"
keywords = ["X-Plane", "plugin"]
description = "High-level interfaces to the X-Plane plugin SDK"
readme = "README.md"

[dependencies]
xplm-sys = { path="../xplm-sys", version="0.4.1" }
thiserror = "1.0.24"

[profile.release]
lto = true

[[example]]
name = "minimal"
crate-type = ["cdylib"]

[[example]]
name = "dataref"
crate-type = ["cdylib"]

[[example]]
name = "menus"
crate-type = ["cdylib"]
